# protine_ml

./: create_ml.ipynb  domain_infomation.md  main.py  model_r2_3333.pkl  pyproject.toml  test.ipynb  test2.ipynb
data/: submission.csv
