[project]
name = "protein-ml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jupyter>=1.1.1",
    "lightgbm>=4.6.0",
    "numpy>=2.2.6",
    "openpyxl>=3.1.5",
    "optuna>=4.4.0",
    "pandas>=2.3.1",
    "rdkit-pypi>=2022.9.5",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
    "xgboost>=3.0.3",
]
